Add methods (in eboa_nav and rboa_nav) to query the template of a specific alert
Correct url to query the template of a specific alert to use the previous method (/eboa_nav/query-<entity>-alert/ vs /eboa_nav/query-alert/)

Add a default option to look for files in the local archive when requesting files to minArc

Correct description of query_entity_alerts_and_render method

--- a/src/vboa/templates/general_view_alerts/general_view_alerts_events_table_content.html
+++ b/src/vboa/templates/general_view_alerts/general_view_alerts_events_table_content.html
@@ -54,7 +54,7 @@
     <td>{{ alert.generator }}</td>
     <td><span class="{{notified_class}}">{{ alert.notified }}</span></td>
     <td>{{ alert.ingestion_time.isoformat() }}</td>
-    <td><a href="/eboa_nav/query-alert/{{ alert.event_alert_uuid }}">{{ alert.event_alert_uuid }}</a></td>
+    <td><a href="/eboa_nav/query-event-alert/{{ alert.event_alert_uuid }}">{{ alert.event_alert_uuid }}</a></td>
     <td><a href="/eboa_nav/query-event-links/{{ alert.event_uuid }}">{{ alert.event_uuid }}</a></td>
   </tr>
   {% endfor %}
