--- a/src/vboa/templates/general_view_alerts/general_view_alerts_explicit_refs_table_content.html
+++ b/src/vboa/templates/general_view_alerts/general_view_alerts_explicit_refs_table_content.html
@@ -54,7 +54,7 @@
       <td>{{ alert.generator }}</td>
       <td><span class="{{notified_class}}">{{ alert.notified }}</span></td>
       <td>{{ alert.ingestion_time.isoformat() }}</td>
-      <td><a href="/eboa_nav/query-alert/{{ alert.explicit_ref_alert_uuid }}">{{ alert.explicit_ref_alert_uuid }}</a></td>
+      <td><a href="/eboa_nav/query-er-alert/{{ alert.explicit_ref_alert_uuid }}">{{ alert.explicit_ref_alert_uuid }}</a></td>
       <td><a href="/eboa_nav/query-er/{{ alert.explicit_ref_uuid }}">{{ alert.explicit_ref_uuid }}</a></td>
     </tr>
     {% endfor %}
