--- a/src/vboa/templates/general_view_alerts/general_view_alerts_reports_table_content.html
+++ b/src/vboa/templates/general_view_alerts/general_view_alerts_reports_table_content.html
@@ -54,7 +54,7 @@
       <td>{{ alert.generator }}</td>
       <td><span class="{{notified_class}}">{{ alert.notified }}</span></td>
       <td>{{ alert.ingestion_time.isoformat() }}</td>
-      <td><a href="/rboa_nav/query-alert/{{ alert.report_alert_uuid }}">{{ alert.report_alert_uuid }}</a></td>
+      <td><a href="/rboa_nav/query-report-alert/{{ alert.report_alert_uuid }}">{{ alert.report_alert_uuid }}</a></td>
       <td><a href="/rboa_nav/query-report/{{ alert.report_uuid }}">{{ alert.report_uuid }}</a></td>
     </tr>
     {% endfor %}
