--- a/src/vboa/templates/general_view_alerts/general_view_alerts_annotations_table_content.html
+++ b/src/vboa/templates/general_view_alerts/general_view_alerts_annotations_table_content.html
@@ -54,7 +54,7 @@
       <td>{{ alert.generator }}</td>
       <td><span class="{{notified_class}}">{{ alert.notified }}</span></td>
       <td>{{ alert.ingestion_time.isoformat() }}</td>
-      <td><a href="/eboa_nav/query-alert/{{ alert.annotation_alert_uuid }}">{{ alert.annotation_alert_uuid }}</a></td>
+      <td><a href="/eboa_nav/query-annotation-alert/{{ alert.annotation_alert_uuid }}">{{ alert.annotation_alert_uuid }}</a></td>
       <td><a href="/eboa_nav/query-annotation/{{ alert.annotation_uuid }}">{{ alert.annotation_uuid }}</a></td>
     </tr>
     {% endfor %}
