--- a/src/vboa/static/css/vboa.css
+++ b/src/vboa/static/css/vboa.css
@@ -457,3 +457,10 @@ input[type="checkbox"]:disabled + .label-text:before{
   width: 80px;
   height: 80px;
 }
+
+/* Styles for debugging */
+/* Allow scrolling the debugging information as explained in:
+   https://github.com/ckan/ckan/issues/6995#issuecomment-1464961958 */
+#flDebug, #flDebug * {
+    overflow-y: auto;
+}
