--- a/src/vboa/templates/eboa_nav/linked_events_nav.html
+++ b/src/vboa/templates/eboa_nav/linked_events_nav.html
@@ -25,6 +25,7 @@
           <th>Source</th>
           <th>Explicit reference</th>
           <th>Linked events</th>
+          <th>Alerts</th>
           <th>Event UUID</th>
         </tr>
       </thead>
@@ -63,6 +64,7 @@
             {% endif %}
           </td>
           <td><a href="/eboa_nav/query-event-links/{{ event.event_uuid }}"><i class="fa fa-link"></i></a></td>
+          <td><a href="/eboa_nav/query-event-alerts/{{ event.event_uuid }}"><i class="fa fa-link"></i></a></td>
           <td>{{ event.event_uuid }}</td>
         </tr>
         {% endfor %}
@@ -81,6 +83,7 @@
           <th>Source</th>
           <th>Explicit reference</th>
           <th>Linked events</th>
+          <th>Alerts</th>
           <th>Event UUID</th>
         </tr>
       </tfoot>
