Add end point to expose metrics to prometheus
Change "Health" button to "Cron" button

--- a/src/vboa/templates/base.html
+++ b/src/vboa/templates/base.html
@@ -106,7 +106,7 @@
                     <a href="#" onclick="vboa.request_switch_on_off_orc()"><i id="orc-indicator" class="circle red-circle"></i><span> Orchestrator</a>
                   </li>
                   <li>
-                    <a href="#" onclick="vboa.request_switch_on_off_cron()"><i id="cron-indicator" class="circle red-circle"></i><span> Health</a>
+                    <a href="#" onclick="vboa.request_switch_on_off_cron()"><i id="cron-indicator" class="circle red-circle"></i><span> Cron</a>
                   </li>
                   <li>
                     <a href="#" onclick="vboa.request_switch_on_off_scheduler()"><i id="sboa-indicator" class="circle red-circle"></i><span> Scheduler</a>
